--- a/assessments.html
+++ b/assessments.html
@@ -13,6 +13,44 @@
   .competency-section { margin-top: 20px; }
   .competency-checkbox { display: block; margin-bottom: 6px; cursor: pointer; }
   .competency-checkbox input { margin-right: 6px; }
+
+
+
+  /* Dropdown container */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 100%;
+  max-height: 200px;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  z-index: 1;
+  padding: 10px;
+}
+
+.dropdown-content label {
+  display: block;
+  cursor: pointer;
+  margin-bottom: 6px;
+}
+
+.dropdown-content input {
+  margin-right: 6px;
+}
+
+#dropdownBtn {
+  width: 100%;
+  padding: 6px;
+  text-align: left;
+  cursor: pointer;
+}
 </style>
 </head>
 <body>
@@ -35,7 +73,10 @@
 <!-- Core Competencies -->
 <div class="competency-section">
   <label><strong>Core Competencies:</strong></label>
-  <div id="coreCompetenciesContainer"></div>
+  <div class="dropdown">
+    <button type="button" id="dropdownBtn">Select Core Competencies ▼</button>
+    <div id="coreCompetenciesContainer" class="dropdown-content"></div>
+  </div>
 </div>
 
 <!-- Subject-specific manual input -->
@@ -516,6 +557,22 @@ if (diffDays <= EDIT_WINDOW_DAYS) {
 }
   document.getElementById("termSelect").onchange = loadExistingAssessment;
 document.getElementById("assessmentTypeSelect").onchange = loadExistingAssessment;
+
+
+
+  // Toggle dropdown
+document.getElementById("dropdownBtn").onclick = () => {
+  const container = document.getElementById("coreCompetenciesContainer");
+  container.style.display = container.style.display === "block" ? "none" : "block";
+};
+
+// Close dropdown if clicked outside
+document.addEventListener("click", function(event) {
+  const dropdown = document.querySelector(".dropdown");
+  if (!dropdown.contains(event.target)) {
+    document.getElementById("coreCompetenciesContainer").style.display = "none";
+  }
+});
 </script>
 </body>
 </html> 
